--- a/styles.css
+++ b/styles.css
@@ -38,13 +38,14 @@ body{
 }
 
 .link--text{
+  font-family: 'Nunito', sans-serif;
   color:white;
   font-size:1.5rem;
-  font-weight:bold;
   margin-left: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
+  text-transform: uppercase;
 }
 
 .link .link--search{
